// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when enumeration items have duplicate short descriptions should have validation failure 1`] = `"Enumeration EntityName redeclares item ShortDescription."`;

exports[`when enumeration items have duplicate short descriptions should have validation failure 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "item",
}
`;

exports[`when enumeration items have multiple duplicate short descriptions should have multiple validation failure 1`] = `"Enumeration EntityName redeclares item ShortDescription1."`;

exports[`when enumeration items have multiple duplicate short descriptions should have multiple validation failure 2`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "item",
}
`;

exports[`when enumeration items have multiple duplicate short descriptions should have multiple validation failure 3`] = `"Enumeration EntityName redeclares item ShortDescription2."`;

exports[`when enumeration items have multiple duplicate short descriptions should have multiple validation failure 4`] = `
Object {
  "column": 4,
  "line": 11,
  "tokenText": "item",
}
`;
